# ProjectX

./: file  manual
Arduino/Mega/: Mega.ino
Arduino/MinImuToMax/: README.txt
Arduino/MinImuToMax/3DSMax/: Predator2010.max  Predator2011.max  Predator2012.max
Arduino/MinImuToMax/MaxScript/: MinImuToMax.ms
Arduino/MinImuToMax/MinImuToMaxArduino/: DCM.ino  I2C.ino  MinImuToMaxArduino.ino  Output.ino
Arduino/MinImuToMax/MinImuToMaxArduino2/: DCM.ino  MinImuToMaxArduino2.ino
Arduino/MinImuToMax/MinImuToMaxArduino3/: MinImuToMaxArduino3.ino  Output.ino
Arduino/ModuleTest/: ModuleTest.ino
Arduino/ModuleTest/Bluetooth/: Bluetooth.ino
Arduino/ModuleTest/DHTtester/: DHTtester.ino
Arduino/ModuleTest/Digital/: Digital.ino
Arduino/ModuleTest/LED/: LED.ino
Arduino/ModuleTest/MoveRLED/: MoveRLED.ino
Arduino/ModuleTest/One_Wire_Sade/: One_Wire_Sade.ino
Arduino/ModuleTest/RGB/: RGB.ino
Arduino/ModuleTest/SharpSensorCm/: SharpSensorCm.ino
Arduino/ModuleTest/Telit/: Telit.ino
Arduino/ModuleTestPWM/: ModuleTestPWM.ino
Arduino/Project/: Gyro.ino  Sensor.ino  ZProject.ino
Arduino/ProjectX/: Gyro.ino  ProjectX.ino  RGB.ino  Sensor.ino  letisim.ino
Arduino/Read/: Read.ino
Arduino/SharpLib/: SharpLib.ino
Arduino/Smart Servo/Ad_m/: Ad_m.ino
Arduino/Smart Servo/Ayakta_Durma/: Ayakta_Durma.ino
Arduino/Smart Servo/CONF/: CONF.ino
Arduino/Smart Servo/M1/: M1.ino
Arduino/Smart Servo/Move_Random/: Move_Random.ino
Arduino/Smart Servo/Oturma/: Oturma.ino
Arduino/Smart Servo/PING/: PING.ino
Arduino/Smart Servo/RESET/: RESET.ino
Arduino/Smart Servo/Read/: Read.ino
Arduino/Smart Servo/SET_ID/: SET_ID.ino
Arduino/Smart Servo/Tekerlek/: Tekerlek.ino
Arduino/ZProject/: Servo.ino
Arduino/ZProject2/: ProjectX.ino
Arduino/ZProject2_Eski/: ZProject2.ino
Arduino/libraries/DynamixelSerial2/: README.txt
Arduino/libraries/ros_lib/face_recognition/: FRClientGoal.h
Arduino/libraries/ros_lib/projectx/: AddTwoInts.h  CommonProperties.h  DataControl.h  Gyro.h  Hash.h  IntArray.h  Label.h  MotorBoost.h  MotorIn.h  MotorInArray.h  MotorOut.h  MotorOutArray.h  MotorOutSingleArray.h  MultiButton.h  MultiFader.h  MultiXYPad.h  OscData.h  Pin.h  ScalableControl.h  Sensor.h  SensorTemp.h  Speech.h  Tabpage.h  TouchOSC_Common.h  XYPad.h
Arduino/libraries/ros_lib/touchosc_msgs/: CommonProperties.h  Label.h  MultiButton.h  MultiFader.h  MultiXYPad.h  ScalableControl.h  Tabpage.h  TouchOSC_Common.h  XYPad.h
Motion/Framework/include/: ArbotixPro.h  chat_message.hpp
Motion/Framework/include/websocketpp/: Makefile  cmake_install.cmake
Motion/Framework/src/: ArbotixPro.cpp  ArbotixPro.cpp~  chat_client.cpp
Motion/Framework/src/motion/: MotionManager.cpp
Motion/Linux/project/rme/: Makefile  rme
ROS/: lib
ROS/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ROS/devel/include/projectx/: Gyro.h  (+32 more)
ROS/install/: .rosinstall  setup.sh
ROS/src/face_recognition/: train.txt
ROS/src/projectx/: CMakeLists.txt  CMakeLists.txt~  Servo2.touchosc  package.xml
ROS/src/projectx/OSC/: ProjectX.touchosc  Servo_Single.touchosc
ROS/src/projectx/launch/: arduino_dir.launch  cam.launch  in.launch  motor.launch  osc.launch  osc.launch~  osc_arduino.launch  osc_motor.launch  run.launch  run2.launch  speak.launch  speak.launch~  t_arduino.launch  test.launch  test_motor.launch  tts.launch
ROS/src/projectx/msg/: Hash.msg  MotorInArray.msg  MotorOut.msg  MotorOutArray.msg  MotorOutSingleArray  Sensor.msg  osc_server_motor.py
ROS/src/projectx/osc/: Mind.touchosc  Servo_Single.touchosc
ROS/src/projectx/scripts/: .fuse_hidden0000005e00000001  arduino_data_control.py  arduino_out_data_server.py  bash.py  bash2.py  face_server.py  file_read.py  motion_control.py  motion_manager.py  motorSubscriber.py  motor_command_server.py  motor_command_server.py~  motor_in_server.py  motor_out_server.py  motor_playback.py  motor_service_server.py  motor_test.py  open_sensor.py  osc_mind_server.py  osc_server.py  osc_server_motor.py  osctest.py  osctest2.py  pin_service.py  rgb_server.py  sensor_temp_client.py  speak_server.py  speech_incoming.py  speech_incoming.py~  talker.py  talker2.py  test_buzzer.py  test_close_gyro.py  test_close_motor.py  test_close_sensor.py  test_head.py  test_motor_array.py  test_open_gyro.py  test_open_motor.py  test_open_sensor.py  (+5 more)
ROS/src/projectx/src/: arduino_sicaklik.cpp  chat_server.cpp  motorSubscriber kopya.cpp  motorSubscriber.cpp  motorSubscriber.h  motor_boost_client.cpp  motor_boost_server.cpp  service_client.cpp  service_server.cpp  talker.cpp
ROS/src/projectx/srv/: Pin.srv  Speech.srv
Speak/: ReadMe  https  https~  index.html  java.js  ros.js  server.pem  speech.html  speech.js  speech_ros.html  style.css
Speak/Script/: ExitSpeechChrome.ascr  ReadMe  RunSpeechChrome.ascr  exit  run  run~
Speak/js/: ros.js
(+703 files in other folders)
