<?xml version="1.0"?>
<package>
  <name>projectx</name>
  <version>0.0.1</version>
  <description>The projectx package</description>
  <maintainer email="kaaninan99@gmail.com">Kaan Inan</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/projectx</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>touchosc_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>touchosc_msgs</run_depend>

  <export>
  </export>
</package>
